CodeMirror now running in QWebEngine

--- a/lqUty/lqUty.qrc
+++ b/lqUty/lqUty.qrc
@@ -43,5 +43,6 @@
         <file>codemirror/theme/xq-dark.css</file>
         <file>codemirror/theme/xq-light.css</file>
         <file>CodeMirror.html</file>
+        <file>qwebchannel.js</file>
     </qresource>
 </RCC>
